# asset-mgr

./: .gitignore  LICENSE  README.md  init.sh  pyproject.toml
assets_mgr/: __init__.py
scripts/: add_image.py  resizeAssets.py
