[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "assets_mgr"
version = "0.0.1"
description = "A lib for standardizing the management of face reenactiment assets"
authors = [
    { name = "Adam Adman", email = "amadman71@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "scikit-image",
    "imageio"
]

[project.urls]
